--- a/src/sass/layouts/_modal-trailer.scss
+++ b/src/sass/layouts/_modal-trailer.scss
@@ -16,12 +16,12 @@
   left: 0;
   right: 0;
   bottom: 0;
-  display: flex;
 
+  display: flex;
   align-items: center;
   justify-content: center;
 
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: #000000;
 }
 
 .modal-youtube__window {
