--- a/src/js/templates/modal-login-markup.hbs
+++ b/src/js/templates/modal-login-markup.hbs
@@ -1,29 +1,34 @@
    
-     <div class="welcome container">
+     <div class="welcome container login-box">
 
-      <form id="login-form">
-      <h3>Log in</h3>
-
-      <input
-        type="email"
-        name="email"
-        placeholder="Email"
-        id="login-email"
-        data-email="email"
-        required
-      />
-      <input
-        type="password"
-        name="password"
-        placeholder="Password"
-        id="login-password"
-        required
-      />
+      <h2>Log in</h2>
+      <form id="login-form" autocomplete="off">
+        <div class="user-box">
+      <input type="email"
+        name="email" id="login-email" required="">
+      <label>Email</label>
+    </div>
+        <div class="user-box">
+      <input type="password"
+        name="password" id="login-password" required="">
+      <label>Password</label>
+    </div>
       <div class="error-login error"></div>
-      <button id="login-btn">Log in</button>
-  
+         <div class="class-flex">
+     <button id="login-btn">
+
+      <span></span>
+      <span></span>
+      <span></span>
+      <span></span>
+      login
+      
+      
+
+    </button>
       <p>
-        No account yet? <span  data-click="click-signup">Signup</span> instead.
+        No account yet? <span class="click-span"  data-toggleSignup="click-signup">Signup</span> instead.
       </p>
+      </div>
         </form>
       </div>
