--- a/src/main.scss
+++ b/src/main.scss
@@ -1,6 +1,6 @@
 @import './sass/base/variables';
 @import './sass/base/common';
-@import './sass/layouts/login-signup';
+// @import './sass/layouts/login-signup';
 @import './sass/layouts/header';
 @import './sass/layouts/my-lib';
 @import './sass/layouts/header-home';
@@ -13,4 +13,5 @@
 @import './sass/layouts/scroll-to-top-btn';
 @import './sass/layouts/footer';
 @import './sass/layouts/pagination';
+@import './sass/layouts/submitBtn';
 // @import './sass/layouts/tui-pagination';
