--- a/src/js/templates/modal-film-markup.hbs
+++ b/src/js/templates/modal-film-markup.hbs
@@ -30,8 +30,8 @@
         <h3 class="modal-meta__title description">About</h3>
         <p class="modal-meta__text">{{overview}}</p>
         <div class="modal-meta__btn-wrap" >
-            <button type="button" data-id="{{id}}" data-watched="watched">add to Watched</button>
-            <button type="button" data-id="{{id}}" data-queue="queue">add to queue</button>
+            <button  type="button" data-id="{{id}}" data-watched="watched" data-modalwatched="watched">add to Watched</button>
+            <button type="button" data-id="{{id}}" data-queue="queue" data-modalqueue="queue">add to queue</button>
         </div>
         <div class="modal-meta_similar-movies">
             <h3>Similar Movies</h3>
