--- a/src/sass/layouts/_modal-film-markup.scss
+++ b/src/sass/layouts/_modal-film-markup.scss
@@ -287,12 +287,42 @@
         color: $header-text-color;
         background-color: $accent-color;
         border: none;
+
+        &:hover {
+          color: $main-text-color;
+          border: 1px solid $main-text-color;
+          background-color: $header-text-color;
+        }
+
+        &.active-modal-btn {
+          cursor: not-allowed;
+          background-color: #f2f2f2;
+          color: rgba(148, 152, 155, 0.5);
+          border: solid 2px transparent;
+          box-shadow: none;
+        }
       }
 
       &:nth-child(2) {
         color: $main-text-color;
         border: 1px solid $main-text-color;
         background-color: $header-text-color;
+
+        &:hover {
+          margin-right: 15px;
+          color: $header-text-color;
+          background-color: $accent-color;
+          box-shadow: 0px 8px 43px rgba(255, 107, 1, 0.6);
+          border: 1px solid transparent;
+        }
+
+        &.active-modal-btn {
+          cursor: not-allowed;
+          background-color: #f2f2f2;
+          color: rgba(148, 152, 155, 0.5);
+          border: solid 2px transparent;
+          box-shadow: none;
+        }
       }
     }
   }
